<resources>
    <string name="google_app_id">YOUR_PROJECT_NUMBER</string>
    <string name="app_name">SOC</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="broke_down">Find Closest Mechanic</string>
    <string name="aa">AA Twitter Feed</string>
    <string name="camera">Take Photo</string>
    <string name="insurance">Insurance</string>
    <string name="close">Close SOC</string>
    <string name="chill">Chill Insurance</string>
    <string name="fbd">FBD</string>
    <string name="libertyInsurance">Liberty Insurance</string>
    <string name="axa">AXA</string>
    <string name="quoteDevil">Quote Devil</string>
    <string name="allianz">Allianz Insurance</string>
    <string name="aviva">Aviva</string>
    <string name="oneTwoThree">123.ie</string>
    <string name="acorn">Acorn Insurance</string>
    <string name="admiral">Admiral Insurance</string>
    <string name="autodirect">Auto Direct</string>
    <string name="carrot">Carrot Insurance</string>
    <string name="churchill">Churchill</string>
    <string name="coverbox">Coverbox</string>
    <string name="directchoice">Direct Choice</string>
    <string name="first">First Insurance</string>
    <string name="aig">AIG</string>
    <string name="halifax">Halifax</string>
    <string name="chooseinsurance">Choose your Insurance</string>
    <string name="instructions">Instructions</string>
    <string name="flat">Fix My Tyre</string>
    <string name="oil">Top up Oil</string>
    <string name="wind">Windshield Washer Tank</string>
    <string name="battery">Jump Start my Car</string>
    <string name="fuel">How to Fuel my Car</string>
    <string name="flatTire">Fix my Tire</string>
    <string name="tire1"><b>1.Find a safe spot to pull over.</b>If youre on the freeway, taking the next exit is the safest bet, even if you have to drive on a blown tire. Otherwise, pull as far onto the shoulder as possible. Dont park in the middle of a curve where approaching cars cant see you. Also, choose a flat spot; jacking up your car on a hill can be a disaster. If you have a manual transmission, leave your car in gear. Be sure to set your parking brake!</string>
    <string name="tire2"><b>2.Turn on your hazard lights.</b>Get the jack, wrench, and spare tire from the trunk of the car and bring them over to the tire that is flat.</string>
    <string name="tire3"><b>3.Use the wrench to loosen the lug nuts.</b>You may need to remove the hubcap. Dont remove the lug nuts at this point; simply loosen them by turning the wrench to the left (counter-clockwise). </string>
    <string name="tire4"><b>4.Use the jack to lift the vehicle off the ground</b>Once the jack is securely in the correct spot, jack up the car until the tire is about 6 inches off the ground.</string>
    <string name="tire5"><b>5.Remove the lug nuts and pull the tire off the car.</b>Make sure to place the lug nuts in a pile that wont get scattered, and pull the tire straight toward yourself to remove it from the wheel base.</string>
    <string name="tire6"><b>6.Place the spare on the car.</b> Line up the lug nut posts with the holes in the spare, and push the spare all the way onto the wheel base until it cant go any farther.</string>
    <string name="tire7"><b>7.Put on the lug nuts.</b>Dont put them on tightly, just make sure theyre on enough for the spare to stay on the car for a moment.</string>
    <string name="tire8"><b>8.Lower the car back to the ground.</b>Use the jack to bring the car back down to ground level. Remove the jack from underneath the car.</string>
    <string name="tire9"><b>9.Make sure the lug nuts are tightened.</b>With the car back on the ground, you can now tighten the lug nuts. Rather than tightening them one by one in order, start with one lug nut, tighten it about 50%, move to the opposite nut (across the circle) and tighten that one about the same amount. Keep tightening opposite lug nuts gradually in turn until each lug nut is as tight as it can be.</string>
    <string name="tire10"><b10.>Put your flat tire and tools back in your trunk. </b10.>Make sure you dont leave anything on the side of the road.</string>
    <string name="oil1"><b>1.Add new oil to the car at the fill hole.</b>The amount you need is in the owners manual, usually listed under "capacities."</string>
    <string name="oil2"><b>2.Replace the fill cap.</b>Check around for any loose tools you might have left around and close the hood.</string>
    <string name="oil3"><b>3.Start the engine.</b>Watch to be sure the oil pressure light goes off after start-up. Put your car in park or neutral with the parking brake on to check for any drips and look carefully under the car to check for any leaks or drips.</string>
    <string name="oil4"><b>4.Check oil levels by pulling out the dipstick.</b>Once vehicle has been turned off again and the oil has settled for 5 to 10 minutes, recheck the dipstick to ensure that the levels are where they need to be.</string>
    <string name="windshield1"><b>1.Needed Supplies</b>Purchase a good-quality windshield washer fluid and funnel (optional) from any automotive, grocery, Target or Wal-Mart retailer.</string>
    <string name="windshield2"><b>2.Open the Hood.</b>Locate the hood release lever inside the vehicle and pull it. Go to the front of the vehicle and reach under the center part of the hood with one hand to discharge the latch and lift up the hood. Look for the support rod along the front or side ledge of the engine area and prop up the hood. Open the windshield washer fluid and set it on the ground along with the funnel in front of the vehicle.</string>
    <string name="windshield3"><b>3.Locate the Windshield Wiper Reservoir Cap.</b>Look for a cap that displays a windshield wiper. It will be near the front of the engine area.Open the cap and set aside. If the cap has a leash, shift it away from the opening.</string>
    <string name="windshield4"><b>4.Add Windshield Wiper Fluid.</b>Pour the fluid into the reservoir until it reaches the fill line. If you are not using a funnel, carefully pour the liquid directly in the opening until it reaches the fill line.</string>
    <string name="windshield5"><b>5.Replace the Cap.</b>Remove the funnel. Place the cap on the opening and press until it snaps.</string>
    <string name="windshield6"><b>6.Close the hood.</b>Support the hood with one hand while you take the hood support rod and secure it back in place. Lower the hood halfway down and release it, pulling your hands away quickly to avoid injury.</string>
    <string name="jump1"><b>1.Park both cars in neutral next to each other</b>Park both cars in neutral next to each other so that theyre close but not touching. Open the bonnet; the jump lead should be able to reach both vehicles.</string>
    <string name="jump2"><b>2.Connect Red Lead</b>Connect the first end of the RED positive lead to the positive terminal on the working battery. Do the same for the other end of the lead for the flat battery.</string>
    <string name="jump3"><b>3.Connect Black Lead</b>Connect the BLACK negative lead to the negative terminal on the working battery. Attach the other end to a metal (earthing) point, such as a bolt or bracket, away from the dead battery. Some cars have negative jump-starting poles - check your handbook to see if yours does.</string>
    <string name="jump4"><b>4.Start Car</b>After about a minute, try starting the car with the dead battery. If it doesnt work, leave it a little longer, but switch off the engine if the leads get hot.</string>
    <string name="jump5"><b>5.Remove Jump Leads</b>Remove the jump leads in reverse to the way you attached them. Make sure they don’t touch together or any metal surfaces. You should then drive for at least 30 minutes or leave the engine running.</string>
    <string name="fuel1"><b>1.Enter petrol station</b>Enter the petrol station and pull up at the side of a petrol pump, remember your check on which side your fuel cap is situated!</string>
    <string name="fuel2"><b>2.Turn off engine</b>Turn off your cars engine and open the fuel cap.</string>
    <string name="fuel3"><b>3.Choose appropriate pump</b>Choose the appropriate pump, remember to choose the fuel type to compliment your cars engine. Diesel pumps are usually coloured black, while Petrol is coloured green, with the label of Unleaded. Also check the name on the pump as some petrol stations sell more expensive fuels that are stated to be more environmentally friendly and performance enhancing.</string>
    <string name="fuel4"><b>4.Insert the nozzle into the fuel cap</b>Lift the pump handle and insert the nozzle into the fuel cap, pull the lever until the fuel begins to flow. Keep an eye on the counter display which will increase as the fuel enters your vehicle in both price and volume.
Choose to either stop at a certain price or continue until your fuel tank is full, when the petrol pump automatically stops this is an indication that your fuel tank is now full.</string>
    <string name="fuel5"><b>5.Pay for fuel</b>Take note of the number of the petrol pump you have used, lock your car and proceed to the checkout. Depending on the time of day or night, the checkout may be within the station building or payable from outside for security. Inform the assistant of your pump number and proceed with payment.</string>
    <string name="fuelText">Top Up Fuel</string>

</resources>
