<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="saveourcar.soc.AllInstructions.FuelCar">
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="580dp"
        android:layout_height="fill_parent" >
        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed"
                android:textSize="27dp"


                android:text="@string/fuelText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/fuel1"
                android:id="@+id/fuel1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel2"
                android:id="@+id/fuel2"
                android:layout_below="@+id/fuel1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel3"
                android:id="@+id/fuel3"
                android:layout_below="@+id/fuel2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel4"
                android:id="@+id/fuel4"
                android:layout_below="@+id/fuel3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel5"
                android:id="@+id/fuel5"
                android:layout_below="@+id/fuel4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>
