<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="saveourcar.soc.AllInstructions.Oil">
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="580dp"
        android:layout_height="fill_parent" >
        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil1"
                android:id="@+id/oil1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil2"
                android:id="@+id/oil2"
                android:layout_below="@+id/oil1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil3"
                android:id="@+id/oil3"
                android:layout_below="@+id/oil2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil4"
                android:id="@+id/oil4"
                android:layout_below="@+id/oil3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            </RelativeLayout>
    </ScrollView>



</RelativeLayout>
